lib/src/compiler/tests/testdata/errors/69.out
error[E001]: syntax error
 --> line:1:23
  |
1 | rule test { meta: a = condition: true }
  |                       ^^^^^^^^^ expecting `-`, INTEGER, FLOAT, STRING, `true` or `false`, found `condition`
  |